--- a/movies.html
+++ b/movies.html
@@ -8,22 +8,32 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Moviestack/Movies</title>
 </head>
-<body class="bg-stone-900">
-    <header class="flex justify-between border border-white-500 bg-stone-800">
-        <div class="flex h-16 ml-8">
-            <img class="w-14 border object-cover border-white-500 rounded-full m-3" src="./resources/Moviestack_isotipo.png" title="logo" alt="logo de la página">
-            <img class="w-40  object-contain" src="./resources/Moviestack_logotipo2.png" title="nombre" alt="nombre de la página">
+
+<body class="bg-stone-900 min-h-screen flex flex-col w-full">
+    <header class="bg-stone-800 px-6 lg:px-11 py-2 min-h-11 flex justify-between items-center border border-white-500">
+        <div class="flex">
+            <img class="w-10 lg:w-14 border object-cover border-white-500 rounded-full" src="./resources/Moviestack_isotipo.png" title="logo" alt="logo de la página">
+            <img class="w-24 lg:w-32 lg:ml-5 object-contain" src="./resources/Moviestack_logotipo2.png" title="nombre" alt="nombre de la página">
         </div>
 
-        <nav class="flex gap-10 items-center mr-16">
-            <a class="font-[raleway] text-xl text-[#FFFFFF]" href="./main.html">HOME</a>
-            <a class="font-[raleway] text-xl text-[#FFFFFF] border p-2" href="./movies.html">MOVIES</a>
-            <a class="font-[raleway] text-xl text-[#FFFFFF]" href="#">FAVS</a>
+        <nav class="flex items-center gap-3 lg:gap-10">
+            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="./main.html">HOME</a>
+            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] border p-2" href="./movies.html">MOVIES</a>
+            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="#">FAVS</a>
         </nav>
     </header>
-    <footer class="border border-white-500 bg-stone-800 p-4 text-xl text-[#FFFFFF]">
+
+    <main class="flex flex-col justify-between grow-[2] 2xl:m-16 items-center m-8">
+        <h1 class="flex bg-stone-800 border border-white-500 w-full h-16 text-2xl text-white text-center justify-center items-center">MOVIES</h1>
+        <div id="contenedor"></div>
+
+        <script src="./data.js"></script>
+        <script src="./index.js"></script>
+    </main>
+
+    <footer class="flex border border-white-500 bg-stone-800 p-4 text-xs lg:text-xl text-center justify-center items-center text-[#FFFFFF] w-full max-h-11">
         <p class="text-center">MindHub - Cohort FS053 JAVA</p>
     </footer>
-    
+
 </body>
 </html>
