--- a/movies.html
+++ b/movies.html
@@ -25,7 +25,8 @@
 
     <main class="flex flex-col justify-between grow-[2] 2xl:m-16 items-center m-8">
         <h1 class="flex bg-stone-800 border border-white-500 w-full h-16 text-2xl text-white text-center justify-center items-center">MOVIES</h1>
-        <div id="contenedor"></div>
+        
+        <div id="contenedor" class="flex flex-wrap gap-8 justify-center w-full overflow-hidden my-8"></div>
 
         <script src="./data.js"></script>
         <script src="./index.js"></script>
