--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
         
         <div class="flex gap-8 lg:gap-12 mt-8 w-full h-20 lg:h-36 lg:justify-center">
             <a class="flex flex-col text-xs bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500" href="./movies.html">CALL TO ACTION<br>(MOVIES)</br></a>
-            <a class="flex flex-col text-xs bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500" href="#">CALL TO ACTION<br>(MOVIES)</br></a>
+            <a class="flex flex-col text-xs bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500" href="#">CALL TO ACTION<br>(FAVS)</br></a>
         </div>
 
         <script src="./data.js"></script>
