--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <nav class="flex items-center gap-3 lg:gap-10">
-            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] border p-2" href="./main.html">HOME</a>
+            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] border p-2" href="./index.html">HOME</a>
             <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="./movies.html">MOVIES</a>
             <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="#">FAVS</a>
         </nav>
@@ -25,19 +25,18 @@
 
     <main class="flex flex-col justify-between grow-[2] 2xl:m-16 items-center m-8">
         <img class="w-full h-auto object-contain lg:object-cover lg:object-top lg:h-80" src="./resources/portada_moviestack.png" title="portada" alt="Portada de la página con películas">
-        <p class="text-center mt-8 text-white 2xl:size-1/2">¡Bienvenido a Moviestack! Tu destino cinematográfico definitivo. Explora nuestro
-             extenso catálogo de películas de todos los géneros. Desde clásicos atemporales 
-             hasta los estrenos más recientes, ofrecemos críticas, trailers, y recomendaci
-             ones personalizadas para satisfacer todos los gustos. Únete a nuestra comunidad
-             , comparte tus opiniones y descubre tu próxima película favorita en Moviestack.</p>
+        <p class="text-center mt-8 text-white 2xl:size-1/2">Welcome to Moviestack! Your ultimate cinematographic destination. Explore our extensive catalog of movies of all genres. 
+            From timeless classics to the newest releases, we offer reviews, trailers, and personalized recommendations to satisfy every taste. Join our community, share your opinions
+             and discover your next favorite movie on Moviestack..</p>
         
         <div class="flex gap-8 lg:gap-12 mt-8 w-full h-20 lg:h-36 lg:justify-center">
-            <a class="flex flex-col text-xs bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500" href="./movies.html">CALL TO ACTION<br>(MOVIES)</br></a>
-            <a class="flex flex-col text-xs bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500" href="#">CALL TO ACTION<br>(FAVS)</br></a>
+            <a class="bg-[url('./resources/1.jpg')] flex flex-col text-2xl bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500 font-bold text-yellow-400 border-2 border-black" href="./movies.html">¡GET TO KNOW OUR CATALOG!</a>
+            <a class="bg-[url('./resources/1.jpg')] flex flex-col text-2xl bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500 font-bold text-yellow-400 border-2 border-black" href="#">YOUR FAVORITE FILMS</a>
         </div>
 
         <script src="./data.js"></script>
-        <script src="./index.js"></script>
+        <script type="module" src="./index.js"></script>
+
     </main>
 
     <footer class="flex border border-white-500 bg-stone-800 p-4 text-xs lg:text-xl text-center justify-center items-center text-[#FFFFFF] w-full max-h-11">
