--- a/movies.html
+++ b/movies.html
@@ -37,7 +37,7 @@
                         <input id="cajaIngreso" class="w-full border-2 px-5 bg-stone-800 text-white" name="Busqueda" type="text" placeholder="Search..">
                     </search>
 
-                    <button id="botonClear" class="border-2 px-5 bg-stone-800 text-white">Clear</button>
+                    <button id="botonClear" class="border-2 px-5 bg-stone-800 text-white">Clean</button>
                 </div>
             </fieldset>
         </form>
@@ -55,3 +55,5 @@
 
 </body>
 </html>
+
+<!--  Fin -->
