--- a/index.html
+++ b/index.html
@@ -30,12 +30,9 @@
              and discover your next favorite movie on Moviestack..</p>
         
         <div class="flex gap-8 lg:gap-12 mt-8 w-full h-20 lg:h-36 lg:justify-center">
-            <a class="bg-[url('./resources/1.jpg')] flex flex-col text-2xl bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500 font-bold text-yellow-400 border-2 border-black" href="./movies.html">¡GET TO KNOW OUR CATALOG!</a>
-            <a class="bg-[url('./resources/1.jpg')] flex flex-col text-2xl bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500 font-bold text-yellow-400 border-2 border-black" href="#">YOUR FAVORITE FILMS</a>
+            <a class="bg-[url('./resources/1.jpg')] bg-cover flex flex-col md:text-2xl bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500 font-bold text-yellow-400 border-2 border-black" href="./movies.html">¡GET TO KNOW OUR CATALOG!</a>
+            <a class="bg-[url('./resources/1.jpg')] bg-cover flex flex-col md:text-2xl bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500 font-bold text-yellow-400 border-2 border-black" href="#">YOUR FAVORITE FILMS</a>
         </div>
-
-        <script src="./data.js"></script>
-        <script type="module" src="./index.js"></script>
 
     </main>
 
@@ -45,3 +42,5 @@
 
 </body>
 </html>
+
+<!-- Fin -->
