Inicio sprint3 API completada

--- a/detallePelicula.html
+++ b/detallePelicula.html
@@ -19,7 +19,7 @@
         <nav class="flex items-center gap-3 lg:gap-10">
             <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="./index.html">HOME</a>
             <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] border p-2" href="./movies.html">MOVIES</a>
-            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="#">FAVS</a>
+            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="./favs.html">FAVS</a>
         </nav>
     </header>
 
@@ -27,7 +27,6 @@
 
         <div id="contenedorDetalles" class="flex flex-wrap my-8 justify-center w-full"></div>
 
-        <script src="./data.js"></script>
         <script src="./detallePelicula.js"></script>
     </main>
 
