--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Servicio de streaming películas y series">
     <link rel="shortcut icon" href="./resources/Moviestack_favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Moviestack/Home</title>
 </head>
@@ -17,9 +18,9 @@
         </div>
 
         <nav class="flex items-center gap-3 lg:gap-10">
-            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] border p-2" href="./index.html">HOME</a>
+            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] border p-2" href="#">HOME</a>
             <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="./movies.html">MOVIES</a>
-            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="#">FAVS</a>
+            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="/favs.html">FAVS</a>
         </nav>
     </header>
 
@@ -31,7 +32,7 @@
         
         <div class="flex gap-8 lg:gap-12 mt-8 w-full h-20 lg:h-36 lg:justify-center">
             <a class="bg-[url('./resources/1.jpg')] bg-cover flex flex-col md:text-2xl bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500 font-bold text-yellow-400 border-2 border-black" href="./movies.html">¡GET TO KNOW OUR CATALOG!</a>
-            <a class="bg-[url('./resources/1.jpg')] bg-cover flex flex-col md:text-2xl bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500 font-bold text-yellow-400 border-2 border-black" href="#">YOUR FAVORITE FILMS</a>
+            <a class="bg-[url('./resources/1.jpg')] bg-cover flex flex-col md:text-2xl bg-stone-400 text-center justify-center w-full lg:w-1/4 lg:h-full hover:bg-red-500 font-bold text-yellow-400 border-2 border-black" href="./favs.html">YOUR FAVORITE FILMS</a>
         </div>
 
     </main>
