--- a/movies.html
+++ b/movies.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Servicio de streaming películas y series">
     <link rel="shortcut icon" href="./resources/Moviestack_favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Moviestack/Movies</title>
 </head>
@@ -18,8 +19,8 @@
 
         <nav class="flex items-center gap-3 lg:gap-10">
             <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="./index.html">HOME</a>
-            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] border p-2" href="./movies.html">MOVIES</a>
-            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="#">FAVS</a>
+            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] border p-2" href="#">MOVIES</a>
+            <a class="font-[raleway] text-xs lg:text-xl text-[#FFFFFF] hover:underline" href="./favs.html">FAVS</a>
         </nav>
     </header>
 
@@ -44,7 +45,6 @@
 
         <div id="contenedor" class="flex flex-wrap gap-8 justify-center w-full overflow-hidden mb-8"></div>
 
-        <script src="./data.js"></script>
         <script type="module" src="./index.js"></script>
 
     </main>
