--- a/favs.html
+++ b/favs.html
@@ -25,11 +25,12 @@
     </header>
 
     <main class="flex flex-col grow-[2] 2xl:m-16 items-center m-8">
-        <h1 class="flex bg-stone-800 border border-white-500 w-full h-16 text-2xl text-white text-center justify-center items-center">MOVIES</h1>
+        <h1 class="flex bg-stone-800 border border-white-500 w-full h-16 text-2xl text-white text-center justify-center items-center">FAVORITES</h1>
 
-        <div id="" class="flex flex-wrap gap-8 justify-center w-full overflow-hidden mb-8"></div>
+        <div id="contenedorFavoritos" class="flex flex-wrap gap-8 justify-center w-full overflow-hidden my-8"></div>
 
         <script type="module" src="./favs.js"></script>
+        <script type="module" src="./module/funciones.js"></script>
 
     </main>
 
